Prevent header overlap when anchor nav link is clicked

--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -842,6 +842,7 @@ td.p-accordion {
 
 html {
   scroll-behavior: smooth;
+  scroll-padding-top: 5rem;
 }
 
 .support-cart-summary {
